--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -121,13 +121,7 @@
 </nav>
 
 <div class="container mb-4">
-   <div _ngcontent-jey-c5="" class="d-sm-flex align-items-center justify-content-between">
-      <h4 _ngcontent-jey-c5="" class="mb-0 text-gray-800">Mangoes Lot Id:AP123</h4>
-      <h4 _ngcontent-jey-c5="" class="mb-0 text-gray-800">Posting Date:22 June 2020</h4>
-      <button _ngcontent-jey-c5="" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm" (click)="onEdit()">
-        <i _ngcontent-jey-c5="" class="fas fa-edit fa-sm text-white-50"></i> Edit</button>
-    </div>
- 
+  
   <div class="row">
     <div class="col-12">
       <div class="table-responsive">
@@ -232,7 +226,7 @@
                           </div>
                         </div>
                         <br>
-                        <button type="button" class="btn btn-outline-primary" (click)="onReviewOffer()">Review Offer</button>
+                        <button type="button" class="btn btn-outline-primary">Review Offer</button>
                       </div>
                     </div>
                   </div>
