--- a/src/app/common/navbar/navbar.component.css
+++ b/src/app/common/navbar/navbar.component.css
@@ -7,3 +7,9 @@
 .darken-grey-text {
     color: #2E2E2E;
 }
+.change-color:hover{
+    color:yellow!important; ;
+}
+.marginclass{
+    margin-right: 4px;margin-bottom:4px;
+}
