--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<div class="wrapper">
+<!--<div class="wrapper">-->
     <!-- Page Content Holder -->
-    <div id="content">
+   <!--<div id="content">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary static-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -31,4 +31,43 @@
         </nav>
         <router-outlet></router-outlet>
     </div>
+</div>-->
+<div class="wrapper">
+    <!-- Page Content Holder -->
+   <div id="content">
+<nav class="navbar navbar-expand-md bg-primary navbar-dark sticky-top">
+    <div class="container">
+    <a class="navbar-brand" href="#">FarmConnect</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-controls="navb" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div id="navb" class="navbar-collapse collapse hide" style="
+    text-align: center;
+">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a  [routerLink]="['/home']" class="nav-link hide-link change-color btn marginclass" style="color:white;">Home</a>
+          </li>
+        <li class="nav-item active">
+          <a  [routerLink]="['/products']" class="nav-link hide-link change-color btn marginclass" style="color:white;">Products</a>
+        </li>
+        <li class="nav-item">
+          <a  [routerLink]="['/dashboard']" class="nav-link hide-link change-color btn marginclass" style="color:white;">Dashboard</a>
+        </li>
+
+      </ul>
+
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item">
+          <a [routerLink]="['/register']" class=" btn btn-light marginclass"><!--<span class="fas fa-user "></span>--> Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/login']" class=" btn btn-success"><!--<span class="fas fa-sign-in-alt"></span>--> Login</a>
+        </li>
+      </ul>
+    </div>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
+</div>
 </div>
