--- a/src/app/components/dashboard/components/dashboard-overview/dashboard-overview.component.html
+++ b/src/app/components/dashboard/components/dashboard-overview/dashboard-overview.component.html
@@ -129,11 +129,11 @@
                   <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
                     <span class="badge badge-pill badge-info mr-2">14<i class="fa fa-user ml-2"></i></span>Transporters Responded</div>
                 </div>
-                <div class="col">
+                <!-- <div class="col">
                   <div class="progress progress-sm mr-2">
                     <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-auto">
@@ -209,11 +209,11 @@
                   <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
                     <span class="badge badge-pill badge-info mr-2">14<i class="fa fa-user ml-2"></i></span>Transporters Responded</div>
                 </div>
-                <div class="col">
+                <!-- <div class="col">
                   <div class="progress progress-sm mr-2">
                     <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-auto">
@@ -271,4 +271,4 @@
     </div>
   </div>
 </div>
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
