--- a/src/app/components/dashboard/forms/post/post.component.html
+++ b/src/app/components/dashboard/forms/post/post.component.html
@@ -33,7 +33,7 @@
 
 
 <!-- <p>farmerpost-form works!</p> -->
-  <div class="row justify-content-center mt-4">
+  <!-- <div class="row justify-content-center mt-4">
     <div class="card text-center">
       
       <div class="card-body">
@@ -72,13 +72,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group toggleAlign">
               <h5 class="organicAlign">Organic:</h5>
-              <!-- <div class="switch">
-                <label>
-                  No
-                  <input type="checkbox">
-                  <span class="lever"></span> Yes
-                </label>
-              </div> -->
+            
               <input type="checkbox" checked data-toggle="toggle" data-onstyle="success">   
                       </div>
          
@@ -88,14 +82,9 @@
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group">
               <input class="form-control form-control-lg" placeholder="Expected Price">
             </div>
-            <!-- <mat-form-field appearance="fill" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group">
-              <input  class="form-control form-control-lg"  placeholder="Expected Date" [matDatepicker]="picker">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field> -->
+       
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 form-group">
               <input class="form-control form-control-lg"  placeholder="Expected Date">
-              <!-- <input type='text' class="form-control form-control-lg" data-provide="datepicker" style='width: 300px;' > -->
             </div>
           
           </div>
@@ -131,34 +120,153 @@
              <textarea class="form-control fsize"  placeholder="Text/Info"  rows="3"></textarea>
           </div>
           
-          <!-- <div class="form-group">
-              <input class="form-control form-control-lg" placeholder="Price/Unit">
-            </div>
-            <div class="form-group">
-              <input class="form-control form-control-lg" placeholder="Select Image to Upload">
-            </div>
-            <div class="form-group">
-              <input class="form-control form-control-lg" placeholder="Select Image to Upload">
-            </div> -->
-          <!-- <div class="form-group">
-            <div class="custom-control custom-checkbox small">
-              <input type="checkbox" class="custom-control-input" id="customCheck">
-              <label class="custom-control-label" for="customCheck">Remember Me</label>
-            </div>
-          </div> -->
-          <a  class="btn btn-primary btn-user btn-block">
+               <a  class="btn btn-primary btn-user btn-block">
             Post
           </a>
           <hr>
           <a  class="btn btn-google btn-user btn-block">
             Cancel
           </a>
-          <!-- <a href="index.html" class="btn btn-facebook btn-user btn-block">
-            <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-          </a> -->
+     
         </form>
       </div>
     </div>
    
+  </div> -->
+  
+  
+ <div class="card mt-4 shadow">
+ <div class="card-body mt-2">
+   <form [formGroup]="postDetails" (ngSubmit)=onPost()>
+   <div class="row mb-2">
+    <div class="col-xs-12 col-sm-12 col-lg-6 col-xl-6 mb-2">
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <h4 class="text-gray-800">Commodity & Category:</h4>
+        
+          <div class="row form-group mt-2">       
+            <select class="form-control  form-control-lg" formControlName="category">
+              <option value="" disabled selected>Category</option>
+              <option>Fruits</option>
+              <option>Vegetables</option>
+              <option>Greens</option>
+              <option>Seeds and Dry Fruits</option>
+              <option>Dal and Pulses</option>
+              <option>Grains</option>
+              <option>Oils</option>
+              <option>Flours</option>
+              <option>Spices</option>
+            </select>
+          </div>
+          <div class="row form-group">       
+            <select class="form-control form-control-lg" formControlName="commodity">
+              <option value="" disabled selected>Commodity</option>
+              <option>Fruits</option>
+              <option>Vegetables</option>
+              <option>Greens</option>
+              <option>Seeds and Dry Fruits</option>
+              <option>Dal and Pulses</option>
+              <option>Grains</option>
+              <option>Oils</option>
+              <option>Flours</option>
+              <option>Spices</option>
+            </select>
+          </div>
+          <div class="row form-group">
+            <input class="form-control form-control-lg" formControlName="variety" placeholder="Variety">
+          </div>
+          <div class="row form-group">
+            <input class="form-control form-control-lg" formControlName="expectedQuantity" placeholder="Expected Qunatity">
+          </div>
+          <div class="row">
+            <div class="col form-group">
+              <input class="form-control form-control-lg" formControlName="expectedDate" placeholder="Expected Date">
+            </div>
+            <div class="col form-group toggleAlign">
+              <h5 class="organicAlign">Organic:</h5>
+              <input type="checkbox" checked data-toggle="toggle" formControlName="organic" data-width="100" data-onstyle="success" data-on="Yes" data-off="No">
+                </div>
+               </div>
+        
+      </div>
+    </div>
+   </div>
+
+   <div class="col-xs-12 col-sm-12 col-lg-6 col-xl-6">
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <h4 class="text-gray-800">Qunatity & Price:</h4>
+      
+          <div class="row mt-2">
+            <div class="col form-group rightPadding">
+              <input class="form-control form-control-lg" formControlName="quantity" placeholder="Qunatity">
+            </div>
+            <div class="col form-group">       
+              <select class="form-control form-control-lg" formControlName="qtyUOM">
+                <option value="" disabled selected>MT</option>
+                <option>T</option>
+                <option>Kgs</option>
+               </select>
+            </div>       
+          </div>
+          <div class="row">
+            <div class="col form-group rightPadding">
+              <input class="form-control form-control-lg" formControlName="price" placeholder="Price">
+            </div>
+            <div class="col form-group">       
+              <select class="form-control form-control-lg" formControlName="priceUOM">
+                <option value="" disabled selected>lb</option>
+                <option>lb</option>
+                <option>lb</option>
+               </select>
+            </div>       
+          </div>
+          <div class="row form-group">
+            <select class="form-control form-control-lg" formControlName="freight">
+                  <option value="" disabled selected>Freight</option>
+                  <option>Yes</option>
+                  <option>No</option>
+                 </select>
+          </div>
+          <div class="row form-group">
+            <select class="form-control form-control-lg" formControlName="movement">
+                  <option value="" disabled selected>Movement</option>
+                  <option>Left</option>
+                  <option>Right</option>
+                 </select>
+          </div>
+          <div class="row form-group">
+            <input class="form-control form-control-lg" formControlName="location" placeholder="Location">
+          </div>
+          
+      </div>
+    </div>
+   </div>
   </div>
+
+  <div class="card shadow-sm bgColor">
+    <div class="card-body">
+  <div class="row">
+    <div class="col">
+      <div class="form-group">
+      <textarea class="form-control fsize" formControlName="text" placeholder="Text/Info"  rows="3"></textarea>
+   </div>
+  </div>
+  </div>
+  <div class="row justify-content-end">
+    <button class="btn btn-primary btn-lg mr-1" type="submit">Post</button>
+    <button  class="btn btn-danger btn-lg">Cancel</button>
+  </div>
+      </div>
+  
+  </div>
+  
+</form> 
+</div>
+ </div>
+
+
+  
+  
+  
   <router-outlet></router-outlet>
