--- a/src/app/components/dashboard/components/responses/responses.component.html
+++ b/src/app/components/dashboard/components/responses/responses.component.html
@@ -12,7 +12,7 @@
         name="search" [(ngModel)]="searchText" autocomplete="off" aria-describedby="basic-addon2">
         <div class="input-group-append">
           <button class="btn btn-primary" type="button">
-            <i class="fas fa-search fa-sm"></i>
+            <i class="fa fa-search fa-sm"></i>
           </button>
         </div>
       </div>
@@ -35,7 +35,7 @@
                 aria-label="Search" aria-describedby="basic-addon2">
               <div class="input-group-append">
                 <button class="btn btn-primary" type="button">
-                  <i class="fas fa-search fa-sm"></i>
+                  <i class="fa fa-search fa-sm"></i>
                 </button>
               </div>
             </div>
@@ -125,7 +125,7 @@
         <h4 _ngcontent-jey-c5="" class="mb-0 text-gray-800">Mangoes Lot Id:AP123</h4>
         <h4 _ngcontent-jey-c5="" class="mb-0 text-gray-800">Posting Date:22 June 2020</h4>
         <button _ngcontent-jey-c5="" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm" (click)="onEdit()">
-          <i _ngcontent-jey-c5="" class="fas fa-edit fa-sm text-white-50"></i> Edit</button>
+          <i _ngcontent-jey-c5="" class="fa fa-edit fa-sm text-white-50"></i> Edit</button>
       </div>
    
     <div class="row">
