--- a/src/app/components/dashboard/components/buyer/buyer.component.html
+++ b/src/app/components/dashboard/components/buyer/buyer.component.html
@@ -13,7 +13,7 @@
                                         <div class="card-body">
                                             <div class="row">
                                                 <div class="col mx-auto text-center">
-                                                    <i class="far fa-comment-alt fa-4x text-info"></i>
+                                                    <i class="fa fa-comment fa-4x text-info"></i>
                                                 </div>
                                             </div>
                                             <div class="row mt-3">
