--- a/src/app/components/dashboard/components/dashboard-overview/dashboard-overview.component.html
+++ b/src/app/components/dashboard/components/dashboard-overview/dashboard-overview.component.html
@@ -4,7 +4,7 @@
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
     <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-        class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+        class="fa fa-download fa-sm text-white-50"></i> Generate Report</a>
   </div>
 
   <!-- Content Row -->
@@ -94,7 +94,7 @@
                 <span class="badge badge-pill badge-primary mr-2">8<i class="fa fa-user ml-2"></i></span> Buyers Responded</div>
             </div>
             <div class="col-auto">
-              <i class="fas fa-calendar fa-2x text-gray-300"></i>
+              <i class="fa fa-calendar fa-2x text-gray-300"></i>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
                 <span class="badge badge-pill badge-success mr-2">10<i class="fa fa-user ml-2"></i></span> Sellers Responded</div>
             </div>
             <div class="col-auto">
-              <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+              <i class="fa fa-dollar fa-2x text-gray-300"></i>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
               </div>
             </div>
             <div class="col-auto">
-              <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+              <i class="fa fa-clipboard fa-2x text-gray-300"></i>
             </div>
           </div>
         </div>
@@ -155,7 +155,7 @@
               
             </div>
             <div class="col-auto">
-              <i class="fas fa-ellipsis-v fa-2x text-gray-300" rel="tooltip" title="Key active" id="blah"(click)="onClickMore()"></i>
+              <i class="fa fa-ellipsis-v fa-2x text-gray-300" rel="tooltip" title="Key active" id="blah"(click)="onClickMore()"></i>
             </div>
           </div>
         </div>
@@ -174,7 +174,7 @@
                 <span class="badge badge-pill badge-primary mr-2">8<i class="fa fa-user ml-2"></i></span> Buyers Responded</div>
             </div>
             <div class="col-auto">
-              <i class="fas fa-calendar fa-2x text-gray-300"></i>
+              <i class="fa fa-calendar fa-2x text-gray-300"></i>
             </div>
           </div>
         </div>
@@ -191,7 +191,7 @@
                 <span class="badge badge-pill badge-success mr-2">10<i class="fa fa-user ml-2"></i></span> Sellers Responded</div>
             </div>
             <div class="col-auto">
-              <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+              <i class="fa fa-dollar fa-2x text-gray-300"></i>
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@
               </div>
             </div>
             <div class="col-auto">
-              <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+              <i class="fa fa-clipboard-list fa-2x text-gray-300"></i>
             </div>
           </div>
         </div>
@@ -254,7 +254,7 @@
           <div class="dropdown no-arrow">
             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+              <i class="fa fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
               <div class="dropdown-header">Dropdown Header:</div>
