--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
               aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn btn-primary" type="button">
-                <i class="fas fa-search fa-sm"></i>
+                <i class="fa fa-search fa-sm"></i>
               </button>
             </div>
           </div>
@@ -38,7 +38,7 @@
           <li class="nav-item dropdown no-arrow d-sm-none">
             <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-search fa-fw"></i>
+              <i class="fa fa-search fa-fw"></i>
             </a>
             <!-- Dropdown - Messages -->
             <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
@@ -49,7 +49,7 @@
                     aria-label="Search" aria-describedby="basic-addon2">
                   <div class="input-group-append">
                     <button class="btn btn-primary" type="button">
-                      <i class="fas fa-search fa-sm"></i>
+                      <i class="fa fa-search fa-sm"></i>
                     </button>
                   </div>
                 </div>
@@ -61,7 +61,7 @@
           <li class="nav-item dropdown no-arrow mx-1">
             <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-bell fa-fw"></i>
+              <i class="fa fa-bell fa-fw"></i>
               <!-- Counter - Alerts -->
               <span class="badge badge-danger badge-counter">3+</span>
             </a>
@@ -74,7 +74,7 @@
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="mr-3">
                   <div class="icon-circle bg-primary">
-                    <i class="fas fa-file-alt text-white"></i>
+                    <i class="fa fa-file text-white"></i>
                   </div>
                 </div>
                 <div>
@@ -85,7 +85,7 @@
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="mr-3">
                   <div class="icon-circle bg-success">
-                    <i class="fas fa-donate text-white"></i>
+                    <i class="fa fa-gift text-white"></i>
                   </div>
                 </div>
                 <div>
@@ -96,7 +96,7 @@
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <div class="mr-3">
                   <div class="icon-circle bg-warning">
-                    <i class="fas fa-exclamation-triangle text-white"></i>
+                    <i class="fa fa-exclamation-triangle text-white"></i>
                   </div>
                 </div>
                 <div>
@@ -112,7 +112,7 @@
           <li class="nav-item dropdown no-arrow mx-1">
             <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-envelope fa-fw"></i>
+              <i class="fa fa-envelope fa-fw"></i>
               <!-- Counter - Messages -->
               <span class="badge badge-danger badge-counter">7</span>
             </a>
@@ -182,20 +182,20 @@
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
               <a class="dropdown-item" href="#">
-                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                <i class="fa fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                 Profile
               </a>
               <a class="dropdown-item" href="#">
-                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                <i class="fa fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                 Settings
               </a>
               <a class="dropdown-item" href="#">
-                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                <i class="fa fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                 Activity Log
               </a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                <i class="fa fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                 Logout
               </a>
             </div>
