--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
         <input id="location" type="text" placeholder="location" />
       </div>
       <div class="input-field third-wrap">
-        <button class="btn-search" type="button">Search</button>
+        <button  [routerLink]="['/results']" class="btn-search" type="button">Search</button>
       </div>
     </div>
     </form>
