icons in dashboard

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -12,7 +12,7 @@
       name="search" [(ngModel)]="searchText" autocomplete="off" aria-describedby="basic-addon2">
       <div class="input-group-append">
         <button class="btn btn-primary" type="button">
-          <i class="fas fa-search fa-sm"></i>
+          <i class="fa fa-search fa-sm"></i>
         </button>
       </div>
     </div>
